--- a/src/App.scss
+++ b/src/App.scss
@@ -20,60 +20,63 @@ body {
   background-repeat: repeat-x;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  color: var(--main-color-dark);
-  width: 100%;
-  text-align: center;
-  margin: 0;
-}
-
-button {
-  padding: 0.5rem 1rem;
-  border: 1px solid var(--main-color);
-  border-radius: 99999rem; //rounded corner
-
-  background-color: var(--main-color) !important;
-  color: white;
-  font-size: 1rem;
-  transition: background-color ease-in-out 250ms, border-color ease-in-out 250ms;
+.App {
 
 
-  &:hover {
-    background-color: var(--main-color-dark) !important;
-    border-color: var(--main-color-dark);
+  h1, h2, h3, h4, h5, h6, p {
+    color: var(--main-color-dark);
+    width: 100%;
+    text-align: center;
+    margin: 0;
   }
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  margin: 1rem;
 
   button {
-    height: 3rem;
-    max-width: 100%;
-    margin: 0.1rem;
-  }
-
-  input {
-    background-color: transparent;
-    font-size: 1rem;
-
-    height: 3rem;
-    width: 25rem;
-    max-width: 100%;
-
-    padding: 0 1rem;
-    margin: 0.1rem;
-
+    padding: 0.5rem 1rem;
     border: 1px solid var(--main-color);
     border-radius: 99999rem; //rounded corner
 
+    background-color: var(--main-color) !important;
+    color: white;
+    font-size: 1rem;
     transition: background-color ease-in-out 250ms, border-color ease-in-out 250ms;
 
+
     &:hover {
+      background-color: var(--main-color-dark) !important;
       border-color: var(--main-color-dark);
     }
   }
-}
 
+  form {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+
+    button {
+      height: 3rem;
+      max-width: 100%;
+      margin: 0.1rem;
+    }
+
+    input {
+      background-color: transparent;
+      font-size: 1rem;
+
+      height: 3rem;
+      width: 25rem;
+      max-width: 100%;
+
+      padding: 0 1rem;
+      margin: 0.1rem;
+
+      border: 1px solid var(--main-color);
+      border-radius: 99999rem; //rounded corner
+
+      transition: background-color ease-in-out 250ms, border-color ease-in-out 250ms;
+
+      &:hover {
+        border-color: var(--main-color-dark);
+      }
+    }
+  }
+}
